--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,13 @@ spring.neo4j.authentication.username=neo4j
 spring.neo4j.authentication.password=123
 spring.neo4j.uri=neo4j://localhost:7687
 spring.data.neo4j.database=neo4j
+
+#página da documentação
+springdoc.swagger-ui.path=/docs.html
+server.servlet.context-path=/demon4j
+#torna os menus colapsados no swagger
+springdoc.swagger-ui.doc-expansion=none
+#ordena as rotas
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.writer-with-order-by-keys=true
+
