--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.data.neo4j.database=neo4j
 #página da documentação
 springdoc.swagger-ui.path=/docs.html
 server.servlet.context-path=/demon4j
+springdoc.swagger-ui.use-root-path=true
 #torna os menus colapsados no swagger
 springdoc.swagger-ui.doc-expansion=none
 #ordena as rotas
