--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=trab
 spring.neo4j.authentication.username=neo4j
-spring.neo4j.authentication.password=123
+spring.neo4j.authentication.password=senha123
 spring.neo4j.uri=neo4j://localhost:7687
 spring.data.neo4j.database=neo4j
 
