--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=trab
 spring.neo4j.authentication.username=neo4j
 #alterar a senha do neo4j
-spring.neo4j.authentication.password=senha123
+spring.neo4j.authentication.password=samuel123
 spring.neo4j.uri=neo4j://localhost:7687
 spring.data.neo4j.database=neo4j
 
-#página da documentação
+#p\u00c3\u00a1gina da documenta\u00c3\u00a7\u00c3\u00a3o
 springdoc.swagger-ui.path=/docs.html
 server.servlet.context-path=/demon4j
 springdoc.swagger-ui.use-root-path=true
