--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=trab
 spring.neo4j.authentication.username=neo4j
 #alterar a senha do neo4j
-spring.neo4j.authentication.password=samuel123
+spring.neo4j.authentication.password=senha123
 spring.neo4j.uri=neo4j://localhost:7687
 spring.data.neo4j.database=neo4j
 
